+ Second Sections + Third Section + Fix z-index Nav

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ nav{
     position: fixed;
     top: 30px;
     right: 10px;
+    z-index: 10;
 }
 .circle{
     display: inline-block;
@@ -60,4 +61,7 @@ img{
     height: 100vh;
     background-color: yellow;
     color: green;
+}
+#first, #second, #third{
+    position: relative;
 }
